--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgb(223, 235, 241);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.flexContainer{
+  margin: 100px auto;
+  width: 700px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #61dafb;
+.title{
+  margin: 20px auto;
+  font: bold 30px Poppins, sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.products{
+  margin: 20px 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.imgWrapper{
+  overflow: hidden;
+  border: 1px solid rgb(100, 100, 100, 0.5);
+}
+
+.imgWrapper img{
+  width: 140px;
+  margin: -20px 5px;
 }
